<resources>
    <string name="app_name">Система мониторинга здоровья</string>
    <string name="main_activity_name">Комплексная система мониторинга здоровья (ZubovSA)</string>
    <string name="pressure_activity_name">Показатели давления</string>
    <string name="vitals_activity_name">Жизненные показатели</string>
    <string name="prompt_fio">ФИО</string>
    <string name="prompt_age">Возраст пациента</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_pressure">Показатели давления</string>
    <string name="btn_vitals">Жизненные показатели</string>
    <string name="prompt_upper_pressure">Верхнее давление</string>
    <string name="prompt_lower_pressure">Нижнее давление</string>
    <string name="prompt_pulse">Пульс</string>
    <string name="presence_tachycardia">Наличие тахикардии</string>
    <string name="check_box_tachycardia_yes">Да</string>
    <string name="check_box_tachycardia_no">Нет</string>
    <string name="prompt_weight">Вес</string>
    <string name="prompt_steps">Количество шагов</string>
    <string name="btn_save_main_activity_yes">"Пациент внесен в базу!"</string>
    <string name="btn_save_exception">"Неверный формат данных!"</string>
    <string name="btn_save_pressure_activity">"Показатели давления сохранены!"</string>
    <string name="btn_save_vitals_activity">"Жизненные показатели сохранены!"</string>
    <string name="field_is_empty">"Заполните все поля!"</string>
    <string name="field_fio_contains_invalid_values">"В поле "ФИО" внесены недопустимые символы!"
    </string>
    <string name="field_steps_contains_invalid_values">
        "В поле "Количество шагов" слишком большое число!"
    </string>
    <string name="field_contains_too_big_value">"Поле содержит слишком много символов!"
    </string>
    <string name="regex_for_fio_main_activity">"([А-ЯЁ][а-яё]+[\\-\\s]?){3,}"</string>
    <string name="btn_main">"Главная станица"</string>
    <string name="date_time_pattern">HH:mm yyyy-MM-dd</string>
</resources>