<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btnMainFromVitalsActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_corner"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnMainFromVitalsActivityOnClick"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/btn_main"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPressureFromVitalsActivity"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPressureFromVitalsActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_corner"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnPressureFromVitalsActivityOnClick"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/btn_pressure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMainFromVitalsActivity" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarVitalsActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_h_m">

        <TextView
            android:id="@+id/vitalsActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/vitals_activity_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbarVitalsActivity"
            app:layout_constraintStart_toStartOf="@+id/toolbarVitalsActivity" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/prompt_weight"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarVitalsActivity" />

    <EditText
        android:id="@+id/editSteps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/prompt_steps"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editWeight"
        app:layout_constraintStart_toStartOf="@+id/editWeight"
        app:layout_constraintTop_toBottomOf="@+id/editWeight"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnVitalsSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_corner"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnSaveWeightAndStepsOnClick"
        android:text="@string/btn_save"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editSteps"
        app:layout_constraintStart_toStartOf="@+id/editSteps"
        app:layout_constraintTop_toBottomOf="@+id/editSteps" />


</androidx.constraintlayout.widget.ConstraintLayout>