<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMainActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_h_m">

        <TextView
            android:id="@+id/toolbarMainActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/main_activity_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbarMainActivity"
            app:layout_constraintStart_toStartOf="@+id/toolbarMainActivity" />
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/editFioPatient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/prompt_fio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMainActivity" />


    <EditText
        android:id="@+id/editAgePatient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/prompt_age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editFioPatient"
        app:layout_constraintStart_toStartOf="@+id/editFioPatient"
        app:layout_constraintTop_toBottomOf="@+id/editFioPatient"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnPatientSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_corner"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnSaveFioAndAgeOnClick"
        android:text="@string/btn_save"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editAgePatient"
        app:layout_constraintStart_toStartOf="@+id/editAgePatient"
        app:layout_constraintTop_toBottomOf="@+id/editAgePatient" />

    <Button
        android:id="@+id/btnPressureFromMainActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_corner"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnPressureOnClick"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/btn_pressure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnVitalsFromMainActivity"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVitalsFromMainActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_corner"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnVitalsOnClick"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/btn_vitals"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPressureFromMainActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>